--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -1,4 +1,3 @@
-@use "./public.scss" as *;
 // 无序列表转时间轴
 .protyle-wysiwyg [data-node-id].list[data-subtype="u"]:is([custom-list-view="时间轴"], [custom-list-view="timeline"]) {
     & > .li {
@@ -7,15 +6,14 @@
         & > .protyle-action {
             top: 0;
             left: 109px;
-            color: var(--QYL-list-view-primary);
-            transform: scale(1.5);
+            color: var(--b3-theme-accent, var(--b3-theme-primary));
             &::before {
-                background: var(--QYL-list-view-primary);
+                background: var(--b3-theme-accent, var(--b3-theme-primary));
             }
             & + [data-node-id] {
                 margin-left: 0;
                 max-width: 120px;
-                color: var(--QYL-list-view-primary);
+                color: var(--b3-theme-accent, var(--b3-theme-primary));
                 font-weight: bold;
                 position: absolute;
                 left: 0px;
@@ -35,7 +33,7 @@
         }
         &::before {
             height: 100%;
-            border-left: 2px solid var(--QYL-list-view-border);
+            border-left: 2px solid var(--b3-border-color-trans, var(--b3-theme-surface-lighter));
             top: 0;
             left: 125px;
             opacity: 1;
@@ -53,7 +51,7 @@
             color: transparent;
             &::after {
                 border-radius: 50%;
-                background-color: var(--QYL-list-view-primary);
+                background-color: var(--b3-theme-accent, var(--b3-theme-primary));
                 mix-blend-mode: normal;
                 width: 10px;
                 height: 10px;
@@ -65,7 +63,7 @@
             & + [data-node-id] {
                 margin-left: 0;
                 max-width: 120px;
-                color: var(--QYL-list-view-primary);
+                color: var(--b3-theme-accent, var(--b3-theme-primary));
 
                 font-weight: bold;
                 position: absolute;
@@ -86,7 +84,7 @@
         }
         &::before {
             height: 100%;
-            border-left: 2px solid var(--QYL-list-view-border);
+            border-left: 2px solid var(--b3-border-color-trans, var(--b3-theme-surface-lighter));
             top: 0;
             left: 125px;
             opacity: 1;
@@ -104,7 +102,7 @@
             & + [data-node-id] {
                 margin-left: 0;
                 max-width: 120px;
-                color: var(--QYL-list-view-primary);
+                color: var(--b3-theme-accent, var(--b3-theme-primary));
                 font-weight: bold;
                 position: absolute;
                 left: 0px;
@@ -121,7 +119,7 @@
         }
         &::before {
             height: 100%;
-            border-left: 2px solid var(--QYL-list-view-border);
+            border-left: 2px solid var(--b3-border-color-trans, var(--b3-theme-surface-lighter));
             top: 0;
             left: 125px;
             opacity: 1;
